# ccn-software-fens-2026

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check_jax_version.yml  check_setup.yml
binder/: environment-cuda.yml  environment.yml  postBuild  requirements.txt
docs/source/: conf.py  index.md
docs/source/full/group_projects/: 01_head_direction.md  02_place_cells.md  04_01_place_cells.md  04_02_place_cells_signal_processing copy.md  04_02_place_cells_signal_processing.md  04_03_place_cells_2d_neural_tuning copy.md  04_03_place_cells_2d_neural_tuning.md  04_04_place_cells_decoding.md  04_place_cells.md  index.md
docs/source/full/group_projects/01_head_direction/: landing.md
docs/source/full/group_projects/02_place_cells/: 02_01_place_cells_1d_neural_tuning.md  02_03_place_cells_2d_neural_tuning.md
docs/source/full/group_projects/04_place_cells/: 04_01_place_cells_1d_neural_tuning.md  04_02_place_cells_signal_processing.md  04_03_place_cells_2d_neural_tuning.md  04_04_place_cells_decoding.md
docs/source/full/live_coding/: 01_fundamentals_of_pynapple.md  04_glm_hmm.md
jenkins/: Dockerfile  Jenkinsfile
scripts/: check_setup.py  setup.py  strip_text.py
src/workshop_utils/: __init__.py  fetch.py  plotting.py  preprocessing.py
