[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ccn_software_fens_2026"
version = "0.1.0"
authors = [
    {name = "Edoardo Balzani", email = "ebalzani@flatironinstitute.org"},
    {name = "William Broderick", email = "wbroderick@flatironinstitute.org"},
    {name = "Guillaume Vejo", email = "gviejo@flatironinstitute.org"},
    {name = "Sarah Jo Venditto", email = "svenditto@flatironinstitute.org"}
]
description = "Utilities for FENS 2026 CCN software workshop"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["neuroscience", "Poisson-GLM"]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

# Define dependencies for the project
dependencies = [
    'myst-nb',
    'myst-parser',
    'sphinx',
    'sphinx-book-theme',
    'sphinx-copybutton',
    'sphinx-togglebutton',
    'sphinx-design',
    'sphinx-autobuild',
    'ipywidgets',
    'requests',
    'jupytext',
    'jupyterlab_myst>=2.6',
    'jupyter',
    "jupyterlab>=4.5",
    'pillow',
    'nemos>=0.2.9',
    'pynapple',
    'click',
    'ipython',
    "scikit-learn",
    "dandi",
    "matplotlib>=3.7",
    "seaborn",
    "pooch",
    # as of May 27, 2026, jax hasn't released later than this on conda-forge. if
    # pip tries to install a more recent version than conda did, it raises an
    # error because pip doesn't know how to uninstall the one that conda
    # installed.
    "jax==0.9.2",
    "fsspec",
    "ONE-api",
]

# Configure package discovery for setuptools
[tool.setuptools.packages.find]
where = ["src"]             # The directory where package modules are located
include = ["workshop_utils"] # The specific package(s) to include in the distribution
